1. re deploy